# map_scanner

./: PROJECT_STRUCTURE.md  README.md  mouse_controller.py  pyproject.toml  requirements.txt  setup.py  window_manager.py
examples/: example_usage.py
map_scanner/: __init__.py  config.py  exceptions.py  logger_config.py  main.py  map_scanner.py  mouse_controller.py  ocr_engine.py  screen_capture.py  utils.py  window_manager.py
map_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
